Added problem insert functionality