@@ -4,10 +4,14 @@ import com.dashboardservice.dashboard_service.dto.ProblemDto;
 import com.dashboardservice.dashboard_service.dto.ProblemTopicDto;
 import com.dashboardservice.dashboard_service.service.interfaces.ProblemService;
 import com.dashboardservice.dashboard_service.service.interfaces.ProblemTopicService;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestParam;
-import org.springframework.web.bind.annotation.RestController;
+import jakarta.validation.Valid;
+import jakarta.validation.constraints.Min;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.*;
 
 import java.util.Arrays;
 import java.util.List;
@@ -25,28 +29,40 @@ public class ProblemController {
     }
 
     @GetMapping("/all")
-    public List<ProblemDto> getAllProblems(){
-        return problemService.getAllProblems();
+    public ResponseEntity<Page<ProblemDto>> getAllProblems(
+            @RequestParam(defaultValue = "0") @Min(0) int page,
+            @RequestParam(defaultValue = "5") @Min(1) int size
+    ) {
+        Pageable pageable = PageRequest.of(page, size);
+        Page<ProblemDto> problems = problemService.fetchAllProblems(pageable);
+        if (problems.isEmpty()) {
+            return ResponseEntity.noContent().build();
+        }
+        return ResponseEntity.ok(problems);
     }
 
     @GetMapping("/by-topics")
-    public List<ProblemDto> getAllProblemsBelongingToTopics(
+    public ResponseEntity<List<ProblemDto>> getAllProblemsBelongingToTopics(
             @RequestParam(name = "topics") String topics,
             @RequestParam(name = "limit", required = false, defaultValue = "5") int limit
-
-    ){
-        if (topics == null || topics.isEmpty()) {
-            List<ProblemTopicDto> problemTopics = problemTopicService.getAllProblemTopics();
-            if (problemTopics.isEmpty()) {
-                return List.of(); // Return an empty list if no topics are available
-            }
-            List<String> topicList = problemTopics.stream()
-                    .map(ProblemTopicDto::getProblemTopicName) // Ensure field matches the DTO definition
-                    .collect(Collectors.toList());
-            return problemService.getAllProblemsBelongingToTopics(topicList, limit);
+    ) {
+        List<ProblemDto> problems = problemService.fetchProblemsByTopicNames(
+                topics == null || topics.isEmpty()
+                        ? problemTopicService.getAllProblemTopics().stream()
+                        .map(ProblemTopicDto::getProblemTopicName)
+                        .collect(Collectors.toList())
+                        : Arrays.asList(topics.split(",")),
+                limit
+        );
+        if (problems.isEmpty()) {
+            return ResponseEntity.noContent().build();
         }
-        // Else give chosen problems
-        List<String> topicList = Arrays.asList(topics.split(","));
-        return problemService.getAllProblemsBelongingToTopics(topicList, limit);
+        return ResponseEntity.ok(problems);
+    }
+
+    @PostMapping("/insert")
+    public ResponseEntity<ProblemDto> insertProblem(@RequestBody @Valid ProblemDto problemDto){
+        ProblemDto response = problemService.createProblem(problemDto);
+        return new ResponseEntity<>(response, HttpStatus.CREATED);
     }
 }
